--- a/styles/module/Splider.module.css
+++ b/styles/module/Splider.module.css
@@ -1,31 +1,308 @@
-.navigation-wrapper {
+@keyframes splide-loading {
+    0% {
+        transform: rotate(0)
+    }
+    to {
+        transform: rotate(1turn)
+    }
+}
+
+.splide__container {
     position: relative;
+    box-sizing: border-box
 }
 
-.arrow {
-    width: 30px;
-    height: 30px;
+.splide__list {
+    margin: 0 !important;
+    padding: 0 !important;
+    width: -webkit-max-content;
+    width: max-content;
+    will-change: transform
+}
+
+.splide.is-active .splide__list {
+    display: flex
+}
+
+.splide__pagination {
+    display: inline-flex;
+    align-items: center;
+    width: 95%;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0
+}
+
+.splide__pagination li {
+    list-style-type: none;
+    display: inline-block;
+    line-height: 1;
+    margin: 0
+}
+
+.splide {
+    visibility: hidden
+}
+
+.splide, .splide__slide {
+    position: relative;
+    outline: none
+}
+
+.splide__slide {
+    box-sizing: border-box;
+    list-style-type: none !important;
+    margin: 0;
+    flex-shrink: 0
+}
+
+.splide__slide img {
+    vertical-align: bottom
+}
+
+.splide__slider {
+    position: relative
+}
+
+.splide__spinner {
     position: absolute;
-    border: none !important;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: 2px solid #999;
+    animation: splide-loading 1s linear infinite
+}
+
+.splide__track {
+    position: relative;
+    z-index: 0;
+    overflow: hidden
+}
+
+.splide--draggable > .splide__track > .splide__list > .splide__slide {
+    -webkit-user-select: none;
+    user-select: none
+}
+
+.splide--fade > .splide__track > .splide__list {
+    display: block
+}
+
+.splide--fade > .splide__track > .splide__list > .splide__slide {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    opacity: 0
+}
+
+.splide--fade > .splide__track > .splide__list > .splide__slide.is-active {
+    position: relative;
+    z-index: 1;
+    opacity: 1
+}
+
+.splide--rtl {
+    direction: rtl
+}
+
+.splide--ttb > .splide__track > .splide__list {
+    display: block
+}
+
+.splide--ttb > .splide__pagination {
+    width: auto
+}
+
+.splide__arrow {
+    position: absolute;
+    z-index: 1;
     top: 50%;
-    z-index: 1 !important;
     transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    fill: #fff;
+    border: none;
+    padding: 0;
+    background: transparent;
+    margin-left: -60px;
+    margin-right: -60px;
+}
+
+@media only screen and (max-width: 1000px) {
+    .splide__arrow {
+        margin-left: 0;
+        margin-right: 0;
+    }
+}
+
+.splide__arrow svg {
+    width: 2.5em;
+    height: 2.5em;
+    fill: #9ca3af;
+    transition: fill .2s linear
+}
+
+.splide__arrow:hover {
+    cursor: pointer
+}
+
+.splide__arrow:hover svg {
+    fill: #ffffff
+}
+
+.splide__arrow:focus {
+    outline: none
+}
+
+.splide__arrow--prev {
+    left: 1.2em
+}
+
+.splide__arrow--prev svg {
+    transform: scaleX(-1)
+}
+
+.splide__arrow--next {
+    right: 1.2em
+}
+
+.splide__pagination {
+    position: absolute;
+    z-index: 1;
+    bottom: .5em;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 0
+}
+
+.splide__pagination__page {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    background: #ccc;
+    border-radius: 50%;
+    margin: 3px;
+    padding: 0;
+    transition: all .2s linear;
+    border: none
+}
+
+.splide__pagination__page.is-active {
+    transform: scale(1.4);
+    background: #00bfff
+}
+
+.splide__pagination__page:hover {
     cursor: pointer;
-    opacity: 1;
-    transition: opacity ease-in-out 500ms;
+    background: #66d9ff
 }
 
-.arrow--left {
-    left: -1.5%;
+.splide__pagination__page:focus {
+    outline: none
 }
 
-.arrow--right {
+.splide__progress__bar {
+    width: 0;
+    height: 3px;
+    background: #00bfff
+}
+
+.splide__spinner {
+    border: 2px solid #00bfff;
+    border-left-color: transparent
+}
+
+.splide--nav > .splide__track > .splide__list > .splide__slide {
+    border: 3px solid transparent;
+    cursor: pointer;
+    opacity: .7
+}
+
+.splide--nav > .splide__track > .splide__list > .splide__slide.is-active {
+    border-color: #00bfff;
+    opacity: 1
+}
+
+.splide--nav > .splide__track > .splide__list > .splide__slide:focus {
+    outline: none
+}
+
+.splide--rtl > .splide__arrows .splide__arrow--prev, .splide--rtl > .splide__track > .splide__arrows .splide__arrow--prev {
+    right: 1em;
+    left: auto
+}
+
+.splide--rtl > .splide__arrows .splide__arrow--prev svg, .splide--rtl > .splide__track > .splide__arrows .splide__arrow--prev svg {
+    transform: scaleX(1)
+}
+
+.splide--rtl > .splide__arrows .splide__arrow--next, .splide--rtl > .splide__track > .splide__arrows .splide__arrow--next {
+    left: 1em;
+    right: auto
+}
+
+.splide--rtl > .splide__arrows .splide__arrow--next svg, .splide--rtl > .splide__track > .splide__arrows .splide__arrow--next svg {
+    transform: scaleX(-1)
+}
+
+.splide--ttb > .splide__arrows .splide__arrow, .splide--ttb > .splide__track > .splide__arrows .splide__arrow {
+    left: 50%;
+    transform: translate(-50%)
+}
+
+.splide--ttb > .splide__arrows .splide__arrow--prev, .splide--ttb > .splide__track > .splide__arrows .splide__arrow--prev {
+    top: 1em
+}
+
+.splide--ttb > .splide__arrows .splide__arrow--prev svg, .splide--ttb > .splide__track > .splide__arrows .splide__arrow--prev svg {
+    transform: rotate(-90deg)
+}
+
+.splide--ttb > .splide__arrows .splide__arrow--next, .splide--ttb > .splide__track > .splide__arrows .splide__arrow--next {
+    top: auto;
+    bottom: 1em
+}
+
+.splide--ttb > .splide__arrows .splide__arrow--next svg, .splide--ttb > .splide__track > .splide__arrows .splide__arrow--next svg {
+    transform: rotate(90deg)
+}
+
+.splide--ttb > .splide__pagination {
+    display: flex;
+    flex-direction: column;
+    bottom: 50%;
     left: auto;
-    right: -1.5%;
+    right: .5em;
+    transform: translateY(50%)
 }
 
-.arrow--disabled {
+.splide__arrows {
     opacity: 0;
+    transition: ease-in-out 500ms;
+}
+
+.show-category:hover .splide__arrows {
+    opacity: 1;
+}
+
+.splide__arrow--next {
+    right: 3rem;
+    transition: ease-in-out 500ms;
+}
+
+.show-category:hover .splide__arrow--next {
+    right: 0.5rem
+}
+
+.splide__arrow--prev {
+    left: 3rem;
+    transition: ease-in-out 500ms;
+}
+
+.show-category:hover .splide__arrow--prev {
+    left: 0.5rem
 }
