--- a/styles/globals.css
+++ b/styles/globals.css
@@ -76,3 +76,28 @@ body {
 .font-poppins {
   font-family: 'Poppins', sans-serif;
 }
+
+
+.lobby-bg {
+  margin-top: 20px;
+  width: 100%;
+  height: 70vh;
+  display: inline-block;
+  overflow: hidden;
+  background: -moz-linear-gradient(bottom,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%, rgba(0, 8, 20, 1) 100%);
+  background: -webkit-gradient(linear, left bottom, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0, 8, 20,0)));
+  background: -webkit-linear-gradient(top,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%,rgba(0, 8, 20, 1) 100%);
+  background: -o-linear-gradient(bottom,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%,rgba(0, 8, 20, 1) 100%);
+  background: -ms-linear-gradient(bottom,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%,rgba(0, 8, 20, 1) 100%);
+  background: linear-gradient(to bottom,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%,rgba(0, 8, 20, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
+}
+
+.lobby-bg .backDrop {
+  position: relative;
+  z-index:-1;
+  min-height: 500px;
+  width: auto;
+  object-fit: cover;
+  background-position: center 20%;
+}
