--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,103 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import "module/Landingpage.module.css";
-@import "module/Toast.module.css";
-@import "module/ShowCard.module.css";
-@import "module/ShowPopup.module.css";
-@import "module/Tooltip.module.css";
-@import "~video.js/dist/video-js.css";
-@import "module/Player.module.css";
-@import "module/VideoOverlay.module.css";
-@import "module/Splider.module.css";
+/* Import Toast Styles */
+@import "libs/Toast.module.css";
+@import "libs/Tooltip.module.css";
 
+/* Import Player Styles */
+@import "~video.js/dist/video-js.css";
+@import "libs/Player.module.css";
+@import "libs/VideoOverlay.module.css";
+@import "libs/Splider.module.css";
+
+/* Import Fonts */
+@import "fonts/fonts.css";
+
+/* Import TailwindCSS */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+/* Global Styles */
 body {
   background-color: #000814;
-}
-
-/* Add custom Fonts */
-@font-face {
-  font-family: "Avenir Heavy";
-  src: url('fonts/Avenir-Heavy/Avenir-Heavy.ttf') format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Oswald";
-  src: url('fonts/Oswald/Oswald-Regular.ttf') format("truetype");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Oswald";
-  src: url('fonts/Oswald/Oswald-Bold.ttf') format("truetype");
-  font-weight: bold;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Oswald";
-  src: url('fonts/Oswald/Oswald-SemiBold.ttf') format("truetype");
-  font-weight: 600;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Oswald";
-  src: url('fonts/Oswald/Oswald-Light.ttf') format("truetype");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Oswald";
-  src: url('fonts/Oswald/Oswald-ExtraLight.ttf') format("truetype");
-  font-weight: 100;
-  font-style: normal;
-}
-
-.font-avenir {
-  font-family: 'Avenir Heavy', sans-serif;
-}
-
-.font-oswald {
-  font-family: 'Oswald', sans-serif;
-}
-
-.font-bebas {
-  font-family: 'Bebas Neue', cursive;
-}
-
-.font-poppins {
-  font-family: 'Poppins', sans-serif;
-}
-
-
-.lobby-bg {
-  margin-top: 20px;
-  width: 100%;
-  height: 70vh;
-  display: inline-block;
-  overflow: hidden;
-  background: -moz-linear-gradient(bottom,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%, rgba(0, 8, 20, 1) 100%);
-  background: -webkit-gradient(linear, left bottom, left bottom, color-stop(0%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0, 8, 20,0)));
-  background: -webkit-linear-gradient(top,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%,rgba(0, 8, 20, 1) 100%);
-  background: -o-linear-gradient(bottom,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%,rgba(0, 8, 20, 1) 100%);
-  background: -ms-linear-gradient(bottom,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%,rgba(0, 8, 20, 1) 100%);
-  background: linear-gradient(to bottom,rgba(0, 8, 20, 1) 0%, rgba(0, 8, 20, 0.7) 50%,rgba(0, 8, 20, 1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
-}
-
-.lobby-bg .backDrop {
-  position: relative;
-  z-index:-1;
-  min-height: 500px;
-  width: auto;
-  object-fit: cover;
-  background-position: center 20%;
 }
