--- a/styles/module/Landingpage.module.css
+++ b/styles/module/Landingpage.module.css
@@ -1,6 +1,5 @@
-.landingGradient {
+.landingPage .topSection {
     margin-top: 20px;
-    position: relative;
     width: 100%;
     height: 70vh;
     display: inline-block;
@@ -14,31 +13,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
 }
 
-.landingGradient .backDrop {
-    position: relative;
-    z-index:-1;
-    min-height: 500px;
-    width: auto;
-    object-fit: cover;
-    background-position: center 20%;
-}
-
-.overlay-top {
-    position: relative;
-    width: 100%;
-    height: 120vh;
-    display: inline-block;
-    overflow: hidden;
-    background: -moz-linear-gradient(bottom, rgba(0, 8, 20, 0) 0%, rgba(0, 8, 20, 1) 100%);
-    background: -webkit-gradient(linear, left bottom, left bottom, color-stop(0%,rgba(0,0,0,0.3)), color-stop(100%,rgba(0, 8, 20,0)));
-    background: -webkit-linear-gradient(top,rgba(0, 8, 20, 0) 0%,rgba(0, 8, 20, 1) 100%);
-    background: -o-linear-gradient(bottom,rgba(0, 8, 20, 0) 0%,rgba(0, 8, 20, 1) 100%);
-    background: -ms-linear-gradient(bottom,rgba(0, 8, 20, 0) 0%,rgba(0, 8, 20, 1) 100%);
-    background: linear-gradient(to bottom,rgba(0, 8, 20, 0) 0%,rgba(0, 8, 20, 1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
-}
-
-.overlay-top .backDrop {
+.landingPage .topSection .backDrop {
     position: relative;
     z-index:-1;
     min-height: 500px;
