--- a/styles/module/Navbar.module.css
+++ b/styles/module/Navbar.module.css
@@ -1,4 +1,4 @@
-.gradient {
+.navbar .gradient {
     background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0, 8, 20, 0.8) 50%, rgba(0, 8, 20, 1) 100%);
     background: -webkit-gradient(linear, left top, left top, color-stop(0%,rgba(0, 8, 20,0.65)), color-stop(100%,rgba(0,0,0,0)));
     background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0, 8, 20, 0.8) 50%,rgba(0, 8, 20, 1) 100%);
