--- a/styles/module/ShowPopup.module.css
+++ b/styles/module/ShowPopup.module.css
@@ -1,4 +1,5 @@
-.show-popup-background {
+/* Top Bar Styles */
+.showPopup .background {
     position: relative;
     width: 100%;
     display: inline-block;
@@ -14,7 +15,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 );
 }
 
-.show-popup-background .close {
+.showPopup .background .closeBTN {
     position: absolute;
     top: 10px;
     right: 20px;
@@ -22,7 +23,7 @@
     cursor: pointer;
 }
 
-.show-popup-background .mute {
+.showPopup .background .muteBTN {
     position: absolute;
     top: 70px;
     right: 20px;
@@ -31,36 +32,14 @@
     cursor: pointer;
 }
 
-.show-popup-background .show-info {
+.showPopup .background .showInfo {
     margin: 0;
     position: absolute;
     bottom: 3%;
     left: 3%;
 }
 
-@media only screen and (max-width: 1024px) {
-    .show-popup-background {
-        height: 325px;
-    }
-
-    .show-popup-background .show-info {
-        left: 4%;
-        bottom: 10%;
-    }
-}
-
-@media only screen and (max-width: 420px) {
-    .show-popup-background{
-        height: 225px;
-    }
-
-    .show-popup-background .show-info {
-        left: 10%;
-        right: 6%;
-    }
-}
-
-.show-popup-background .backDrop {
+.showPopup .background .backDrop {
     position: relative;
     z-index:-1;
     min-height: 500px;
@@ -69,44 +48,69 @@
     object-fit: cover;
 }
 
-.separator {
+@media only screen and (max-width: 1024px) {
+    .showPopup .background {
+        height: 325px;
+    }
+
+    .showPopup .background .showInfo {
+        left: 4%;
+        bottom: 10%;
+    }
+}
+
+@media only screen and (max-width: 420px) {
+    .showPopup .background {
+        height: 225px;
+    }
+
+    .showPopup .background .showInfo {
+        left: 10%;
+        right: 6%;
+    }
+}
+
+
+/* Episode Views */
+
+.showPopup .separator {
     display: flex;
     align-items: center;
     text-align: center;
 }
 
-.separator::before,
-.separator::after {
+.showPopup .separator::before,
+.showPopup .separator::after {
     content: '';
     flex: 1;
     border-bottom: 2px solid rgb(156, 163, 175);
 }
 
-.separator:not(:empty)::before {
+.showPopup .separator:not(:empty)::before {
     margin-right: 2em;
 }
 
-.separator:not(:empty)::after {
+.showPopup .separator:not(:empty)::after {
     margin-left: 2em;
 }
 
-.episodeSelector {
+.showPopup .episodeSelector {
     transform: scale(1);
     transition: all .2s ease-in-out;
 }
 
-.episodeSelector:hover .overlay {
+.showPopup .episodeSelector:hover .overlay {
     opacity: 1;
 }
 
-.episodeSelector .overlay {
+.showPopup .episodeSelector .overlay {
     opacity: 0;
     background-color: rgba(0, 0, 0, 0.5);
     transition: opacity 0.2s;
     cursor: pointer;
 }
 
-.episodeSelector .overlay span {
+.showPopup .episodeSelector .overlay span {
     height: 48px;
     width: 48px;
     margin: auto;
