--- a/src/styles/module/StartPage.module.css
+++ b/src/styles/module/StartPage.module.css
@@ -25,5 +25,5 @@
     min-height: 500px;
     width: auto;
     object-fit: cover;
-    background-position: center 20%;
+    background-position: center;
 }
